# model_registry

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: main.py
src/app/: list_models.py  register.py  routes.py  status.py  tasks_creation_pause.py  tasks_creation_unpause.py  unregister.py
src/crons/: crons.py
src/db/: __init__.py  interface.py  scheme.py
src/db/inmemory/: __init__.py  db.py
src/db/postgres/: db.py
src/models/: models.py  scheme.py
