[tool.poetry]
name = "model-registry"
version = "0.1.0"
description = ""
authors = ["Timur Iakhshigulov <t.iakhshigulov@innopolis.university>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.12"
aioboto3 = "11.3.1"
aiobotocore = "2.6.0"
aiofiles = "23.2.1"
aiohttp = "3.9.5"
aioitertools = "0.11.0"
aiokafka = "0.10.0"
aioresponses = "0.7.6"
aiosignal = "1.3.1"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
attrs = "23.2.0"
boto3 = "1.28.17"
botocore = "1.31.17"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
coverage = "7.5.1"
crashtest = "0.4.1"
distlib = "0.3.8"
dnspython = "2.6.1"
dulwich = "0.21.7"
ecdsa = "0.19.0"
email-validator = "2.1.1"
fastapi = "0.111.0"
fastapi-cli = "0.0.2"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
flake8 = "5.0.4"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "0.16.3"
httptools = "0.6.1"
httpx = "0.23.3"
idna = "3.7"
iniconfig = "2.0.0"
installer = "0.7.0"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jinja2 = "3.1.3"
jmespath = "1.0.1"
keyring = "24.3.1"
loguru = "0.7.2"
mako = "1.3.3"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mccabe = "0.7.0"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
mypy = "0.971"
mypy-extensions = "1.0.0"
orjson = "3.10.3"
packaging = "24.0"
passlib = "1.7.4"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.1"
pluggy = "1.5.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-dotenv = "0.4.0"
poetry-plugin-export = "1.7.1"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pycodestyle = "2.9.1"
pycparser = "2.22"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
pydantic-core = "2.18.2"
pyflakes = "2.5.0"
pygments = "2.18.0"
pyproject-hooks = "1.1.0"
pytest = "8.2.0"
pytest-asyncio = "0.20.3"
pytest-cov = "3.0.0"
pytest-mock = "3.14.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
rapidfuzz = "3.9.0"
redis = "5.0.4"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rfc3986 = "1.5.0"
rich = "13.7.1"
rsa = "4.9"
s3transfer = "0.6.2"
setuptools = "69.5.1"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.37.2"
tomlkit = "0.12.4"
trove-classifiers = "2024.4.10"
typer = "0.12.3"
types-aiofiles = "22.1.0.9"
typing-extensions = "4.11.0"
ujson = "5.9.0"
urllib3 = "1.26.18"
uvicorn = "0.29.0"
uvloop = "0.19.0"
virtualenv = "20.26.1"
watchfiles = "0.21.0"
websockets = "12.0"
wrapt = "1.16.0"
xattr = "1.1.0"
yarl = "1.9.4"
arqanmode = {path = "../arqanmode"}
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
